<resources>
    <string name="app_name">Thoagreplica</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_food">Food</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>
    <string name="title_activity_getstarted">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
