<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_food_vector"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_vector"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart_vector"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_order_vector"
        android:title="@string/title_order" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_vector1"
        android:title="@string/title_account" />


</menu>
